NS_ERROR_NOT_AVAILABLE: PreferDisplayName: undefined - not a boolean AddrBookCard.jsm:199 - TB 78 ESR
Categories
(MailNews Core :: Address Book, defect)
Tracking
(thunderbird_esr78 affected, thunderbird_esr102 wontfix)
People
(Reporter: jorgk-bmo, Assigned: mkmelin)
References
Details
(Keywords: regression)
Attachments
(1 file)
Switched to TB 78 ESR and getting this a lot in the console:
NS_ERROR_NOT_AVAILABLE: PreferDisplayName: undefined - not a boolean AddrBookCard.jsm:199
getPropertyAsBool resource:///modules/AddrBookCard.jsm:199
Updated•5 years ago
|
Comment 1•5 years ago
|
||
Not a bug. Just XPCOM complaining about an error value going past. The error value is correct.
Updated•5 years ago
|
Reporter | ||
Comment 2•5 years ago
|
||
Well, no point painting the console red, is there?
Reporter | ||
Comment 3•5 years ago
|
||
This is in TB 78 to which I've just migrated. So if the ABs aren't right, then there is an issue in the migration.
Comment 4•5 years ago
|
||
So you don't see what the issue this user describers for display name? https://support.mozilla.org/en-US/questions/1296572
Comment 5•5 years ago
•
|
||
(In reply to Wayne Mery (:wsmwk) from comment #4)
So you don't see what the issue this user describers for display name? https://support.mozilla.org/en-US/questions/1296572
I think what they're trying to say is that the check box in the edit contact dialog is always ticked when it shouldn't be. I've checked 68 and the same problem existed there. We should fix it, but it's not related to this error message.
Filed bug 1655884 for that.
Comment 6•5 years ago
|
||
(In reply to Jorg K (CEST = GMT+2) from comment #2)
Well, no point painting the console red, is there?
I cannot prevent the message from being printed.
Comment 7•5 years ago
|
||
per comment 6
Assignee | ||
Comment 9•2 years ago
|
||
I think we can just change the IDL to avoid console spew from this.
Assignee | ||
Comment 10•2 years ago
|
||
Change the IDL to use a default value in case the property was not set. This way we avoid the pointless error spew.
There were many "errors" in tests such as comm/mail/test/browser/message-header/browser_messageHeader.js
Assignee | ||
Updated•2 years ago
|
Comment 11•2 years ago
|
||
Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/8e41205b2dce
Fix idl to avoid lots of "PreferDisplayName: undefined - not a boolean" errors. r=leftmostcat
Description
•