Bug 1652274 - Fix idl to avoid lots of "PreferDisplayName: undefined - not a boolean" errors. r=leftmostcat

Change the IDL to use a default value in case the property was not set. This way we avoid the pointless error spew.
There were many "errors" in tests such as comm/mail/test/browser/message-header/browser_messageHeader.js

Differential Revision: https://phabricator.services.mozilla.com/D175080

--HG--
extra : rebase_source : c376ce147f4ef76ad22d0d7b6e85a5d4bf6dc0d2
extra : amend_source : 0cd60bb13aacea2df1ce6d8a875673a72a9b5eaa